# Whittle

./: .gitignore  README.md  naca_stl.py  pyproject.toml
backend/: __init__.py  requirements.txt  setup.py
backend/.cache/41/: cache.db
backend/agents/: __init__.py  cad_agent.py  config.py  mesh_agent.py  simulation_agent.py
backend/api/: __init__.py  agent_endpoints.py
backend/app/: main.py
backend/app/api/: requirements.py
backend/app/core/: config.py  parsing.py
backend/app/models/: requirements.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  vite-env.d.ts
openfoam_copilot/: cli.py
openfoam_copilot/core/: dict_parser.py
whittle/: __init__.py  cli.py  config.py
whittle/mesh/: __init__.py  ai_assistant.py  assistant.py  templates.py
whittle/src/: __init__.py  ai_assistant.py
whittle/src/interfaces/: __init__.py  case_structure_interface.py  conversation_interface.py  dictionary_interfaces.py  file_path_interface.py  mesh_executor_interface.py  prompt_interface.py  solver_managers.py  solver_plugin.py  solver_type.py
whittle/src/managers/: __init__.py  conversation_manager.py  dictionary_manager.py  file_path_manager.py  file_system_case_manager.py  mesh_executor.py  plugin_registry.py  prompt_manager.py  solver_factory.py
whittle/src/plugins/: __init__.py  openfoam_plugin.py
